--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
-    "@types/express": "^4.17.17"
+    "typescript": "^5.0.0"
   }
 }
